--- a/downloads.html
+++ b/downloads.html
@@ -19,6 +19,7 @@
 		<link rel="apple-touch-icon-precomposed" href="img/tosdr-icon-57.png">
 
 		<script src="js/jquery-1.7.1.min.js"></script>
+		<script src="js/downloads.js"></script>
 		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">    <!--http://j.mp/mobileviewport-->
 	</head>
 	<body id="downloads-html" data-spy="scroll">
@@ -66,7 +67,7 @@
 
 		<div  class="container" id="tosdr-content" role="main">
 
-                    
+                  <a name="tosdr-firefox"></a>
                     <section id="tosdr-firefox" class="browser-extension row">
                         <h2 class="page-header">Mozilla Firefox add-on</h2>
                         <img src="https://addons.cdn.mozilla.net/media/img/app-icons/med/firefox.png?b=8a366bf" alt="" class="logo span1" />
@@ -87,7 +88,8 @@
                         </div>
                     </section>
                     <!--tosdr-firefox-->
-                    <section id="tosdr-chrome" class="browser-extension row">
+                    <a name="tosdr-chrome"></a>
+		    <section id="tosdr-chrome" class="browser-extension row">
                         <h2 class="page-header">Google Chrome extension</h2>
                         <img src="img/chrome-webstore.png" alt="" class="logo span1"  />
                         <div class="description span7">
@@ -108,7 +110,7 @@
                         </div>
                     </section>
                     <!--tosdr-chrome-->
-                    
+                    <a name="tosdr-safari"></a>
                     <section id="tosdr-safari" class="browser-extension row">
                         <h2 class="page-header">Safari extension</h2>
                         <img src="https://extensions.apple.com/home/images/required_safari_icon_20110501.png" alt="" class="logo span1"  />
@@ -122,7 +124,7 @@
                         </div>
                     </section>
                     <!--tosdr-safari-->
-
+		    <a name="tosdr-opera"></a>
                     <section id="tosdr-opera" class="browser-extension row">
                         <h2 class="page-header">Opera add-on</h2>
                         <img src="https://addons.opera.com/static/addonscatalog/images/o_logo.png" alt="" class="logo span1"  />
@@ -136,7 +138,7 @@
                         </div>
                     </section>
                     <!--tosdr-opera-->
-
+		    <a name="tosdr-ie"></a>
                     <section id="tosdr-ie" class="browser-extension row">
                         <h2 class="page-header">Internet Explorer: coming soon</h2>
                         <img src="https://www.microsoft.com/global/ImageStore/PublishingImages/logos/56x56/ie_symbol_clr_56x56.png" alt="" class="logo span1" />
