--- a/index-template.html
+++ b/index-template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="utf-8">
 		<title>Terms of Service; Didn&apos;t Read</title>
@@ -60,13 +60,13 @@
                     <h1><img src="img/tosdr-logo.png" alt="Terms of Service; Didn&apos;t&nbsp;Read" width="960" height="328" /></h1>
                 </div>
 
-                <h2>“<strong>I have read and agree to the Terms</strong>” is the biggest lie on the web.&nbsp;We&nbsp;aim to&nbsp;fix&nbsp;that.</h2>
+                <h2>「<strong>私は利用規約を読み同意しました</strong>」はウェブ上で最大の嘘です。&nbsp;私たち&nbsp;はこの問題を&nbsp;直す&nbsp;ことを目的としています。</h2>
             </section>
         </div><!--hero-unit-->
 
 	    <div  class="container" id="tosdr-content" role="main">
                 <section id="intro">
-                    <p>We are a user rights <a href="about.html" title="Learn more about us">initiative</a> to <a href="classification.html" title="What's our classification?">rate and label</a> website terms &amp; privacy policies, from very good <span class="label A">Class A</span> to&nbsp;very&nbsp;bad&nbsp;<span class="label E">Class E</span>.</p>			
+                    <p>私達はユーザの権利を守る <a href="about.html" title="Learn more about us">イニシアチブ</a>で、ウェブサイトの利用規約やプライバシー・ポリシーを非常に優れた<span class="label A">Aクラス</span>から最悪の<span class="label C">Eクラス</span>まで<a href="classification.html" title="What's our classification?">格付けし表示する</a>ことを目的としています。 </p>			
                     <p>Terms of service are often <strong>too long to read</strong>, but it's important to understand what's in them. Your rights online depend on them. <!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->We hope that our ratings can help you get informed abour your rights. Do not hesitate to click <a href="#services">on a service below</a>, to have more details! You can also get the ratings directly in your browser by installing our web browser add-on:</p>
                 </section>
                 <section id="further">
