--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
-		<title>Terms of Service; Didn&apos;t Read</title>
-		<meta name="description" content="Terms of Service; Didn't Read (ToS;DR) is an active project to fix the biggest lie on the web. We help you understand the Terms and Conditions and Privacy Policies of websites.">
-		<meta name="author" content="ToS;DR Team">
+		<title>Terms of Service; Didn&apos;t Read Japan</title>
+		<meta name="description" content="Terms of Service; Didn't Read (ToS;DR) Japan はウェブ最大の嘘を正す活発なプロジェクトです。私たちは皆さんがウェブサイトの利用規約やプライバシー・ポリシーを理解するお手伝いをします。">
+		<meta name="author" content="ToS;DR Japan Team">
 
 		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
@@ -33,21 +33,21 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#"><img src="img/tosdr-icon-16.png" alt="" style="vertical-align:baseline;margin-right:.5em;" class="logo" />Terms of Service; Didn't&nbsp;Read</a>
+					<a class="brand" href="#"><img src="img/tosdr-icon-16.png" alt="" style="vertical-align:baseline;margin-right:.5em;" class="logo" />Terms of Service; Didn't&nbsp;Read Japan</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li class=""><a href="#services">Ratings</a></li>
+							<li class=""><a href="#services">レーティング</a></li>
 <!--							<li class=""><a href="#classification">Classification</a></li>-->
 <!--							<li class=""><a href="#workinprogress">Progress</a></li>-->
-							<li class=""><a href="http://tosdr.org/about.html">About</a></li>
+							<li class=""><a href="http://tosdr.org/about.html">このサイトについて</a></li>
 <!--							<li class=""><a href="#categories">Categories</a></li>-->
 						</ul>
 <!--						<p class="pull-right">-->
 <!--							<a href="#funding" class="btn btn-success btn-mini" style="position:absolute;">Donate</a>-->
 <!--						</p>-->
 						<p class="pull-right follow-us">
-							Follow us <a href="http://twitter.com/tosdr">@tosdr</a> &nbsp; 
-							Donate: <a href="http://flattr.com/thing/821090/ToSDR" target="_blank"><img src="/img/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+							Twitterで<a href="http://twitter.com/tosdr">@tosdr</a>をフォロー &nbsp; 
+							寄付はこちら： <a href="http://flattr.com/thing/821090/ToSDR" target="_blank"><img src="/img/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
 						</p>
 					</div>
 				</div>
@@ -60,21 +60,21 @@
                     <h1><img src="img/tosdr-logo.png" alt="Terms of Service; Didn&apos;t&nbsp;Read" width="960" height="328" /></h1>
                 </div>
 
-                <h2>「<strong>私は利用規約を読み同意しました</strong>」はウェブ上で最大の嘘です。&nbsp;私たち&nbsp;はこの問題を&nbsp;直す&nbsp;ことを目的としています。</h2>
+                <h2>「<strong>私は利用規約を読み、同意しました</strong>」はウェブ最大の嘘です。&nbsp;私たち&nbsp;はこの嘘を&nbsp;正す&nbsp;ことを目的としています。</h2>
             </section>
         </div><!--hero-unit-->
 
 	    <div  class="container" id="tosdr-content" role="main">
                 <section id="intro">
-                    <p>私達はユーザの権利を守る <a href="about.html" title="Learn more about us">イニシアチブ</a>で、ウェブサイトの利用規約やプライバシー・ポリシーを非常に優れた<span class="label A">Aクラス</span>から最悪の<span class="label C">Eクラス</span>まで<a href="classification.html" title="What's our classification?">格付けし表示する</a>ことを目的としています。 </p>			
-                    <p>Terms of service are often <strong>too long to read</strong>, but it's important to understand what's in them. Your rights online depend on them. <!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->We hope that our ratings can help you get informed abour your rights. Do not hesitate to click <a href="#services">on a service below</a>, to have more details! You can also get the ratings directly in your browser by installing our web browser add-on:</p>
+                    <p>私たちはユーザの権利を守る <a href="about.html" title="私たちについてさらに学ぶ">イニシアチブ</a>です。ウェブサイトの利用規約やプライバシー・ポリシーを、最高の<span class="label A">クラスA</span>から最悪の<span class="label C">クラスE</span>まで<a href="classification.html" title="私たちの格付けとは？">格付けし表示する</a>ことを目的としています。 </p>			
+                    <p>利用規約はしばしば<strong>読むには長すぎる</strong>ものです。しかし、その内容を理解することは重要です。皆さんのオンラインにおける権利は利用規約に依存するからです。<!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->私たちのレーティングが、皆さんが持つ権利について理解する手助けになることを望んでいます。ぜひ<a href="#services">以下のサービス</a>をクリックし、詳細をお読みください！ また、ブラウザに私たちのウェブブラウザアドオンをインストールすることで、レーティングを直接入手することもできます。:</p>
                 </section>
                 <section id="further">
-                    <p><a href="downloads.html" class="btn btn-large btn-success">Download browser add-on</a><!-- TODO alternative download link and alternative browser name addon/extension depending on browser used; otherwise just use canonical downloads.html link--></p>
+                    <p><a href="downloads.html" class="btn btn-large btn-success">ブラウザアドオンをダウンロード</a><!-- TODO alternative download link and alternative browser name addon/extension depending on browser used; otherwise just use canonical downloads.html link--></p>
                     <ul class="masthead-links">
-                        <li><a href="contribute.html">Contribute</a></li>
-                        <li><a href="api.html">Develop</a></li>
-                        <li><a href="http://group.tosdr.org">Join the group</a></li>
+                        <li><a href="contribute.html">貢献する</a></li>
+                        <li><a href="api.html">開発する</a></li>
+                        <li><a href="https://groups.google.com/forum/#!forum/tosdr-jp">グループに参加する</a></li>
                     </ul>
                 </section>
                 <section>
@@ -124,7 +124,7 @@
 		
 			
 			<section id="services">
-				<h2 class="page-header">Ratings</h2>
+				<h2 class="page-header">レーティング</h2>
 
 				<div class="row">			
 					<div id="filter-by" class="span3">
@@ -231,25 +231,25 @@
             <div class="container">
                 <nav id="sitemap">
                     <ul class="row">
-                        <li class="span3"><a href="http://tosdr.org/index.html">Home</a>
+                        <li class="span3"><a href="http://tosdr.org/index.html">ホーム</a>
                             <ul>
                                 <li><a href="http://tosdr.org/index.html#services">Rated Services</a></li>
                                 <li><a href="http://tosdr.org/topics.html#topics">Rated Topics</a></li>
                                 <li><a href="http://tosdr.org/downloads.html">Download browser extensions</a></li>
                             </ul>
                         </li>
-                        <li class="span3"><a href="http://tosdr.org/about.html">About</a>
+                        <li class="span3"><a href="http://tosdr.org/about.html">このサイトについて</a>
                             <ul>
-                                <li><a href="http://tosdr.org/about.html#contact">Contact us</a></li>
-                                <li><a href="http://tosdr.org/classification.html">Classification</a></li>
-                                <li><a href="http://tosdr.org/legal.html">Legal</a></li>
-                                <li><a href="http://tosdr.org/blog/index.html">Blog</a></li>
+                                <li><a href="http://tosdr.org/about.html#contact">連絡先</a></li>
+                                <li><a href="http://tosdr.org/classification.html">格付け</a></li>
+                                <li><a href="http://tosdr.org/legal.html">法的Legal</a></li>
+                                <li><a href="http://tosdr.org/blog/index.html">ブログ</a></li>
                             </ul>
                         </li>
-                        <li class="span3"><a href="http://tosdr.org/contribute.html">Contribute</a>
+                        <li class="span3"><a href="http://tosdr.org/contribute.html">貢献するには</a>
                             <ul>
-                                <li><a href="http://tosdr.org/contribute.html#donate">Donate</a></li><li><a href="http://tosdr.org/contribute.html#join">Join us</a></li>
-                                <li><a href="http://tosdr.org/get-involved.html">Get involved</a></li>
+                                <li><a href="http://tosdr.org/contribute.html#donate">寄付</a></li><li><a href="http://tosdr.org/contribute.html#join">Join us</a></li>
+                                <li><a href="http://tosdr.org/get-involved.html">参加するには</a></li>
                                 <li><a href="http://tosdr.org/api.html">API</a></li>
                             </ul>
                         </li>
