--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
-		<title>Terms of Service; Didn&apos;t Read Japan</title>
-		<meta name="description" content="Terms of Service; Didn't Read (ToS;DR) Japan はウェブ最大の嘘を正す活発なプロジェクトです。私たちは皆さんがウェブサイトの利用規約やプライバシー・ポリシーを理解するお手伝いをします。">
+		<title>Terms of Service; Didn&apos;t Read (Japan)</title>
+		<meta name="description" content="Terms of Service; Didn't Read (ToS;DR) はウェブ最大の嘘を正す活発なプロジェクトです。皆さんがウェブサイトの利用規約やプライバシー・ポリシーを理解するお手伝いをします。">
 		<meta name="author" content="ToS;DR Japan Team">
 
 		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -33,10 +33,10 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#"><img src="img/tosdr-icon-16.png" alt="" style="vertical-align:baseline;margin-right:.5em;" class="logo" />Terms of Service; Didn't&nbsp;Read Japan</a>
+					<a class="brand" href="#"><img src="img/tosdr-icon-16.png" alt="" style="vertical-align:baseline;margin-right:.5em;" class="logo" />Terms of Service; Didn't&nbsp;Read (Japan)</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li class=""><a href="#services">レーティング</a></li>
+							<li class=""><a href="#services">格付け</a></li>
 <!--							<li class=""><a href="#classification">Classification</a></li>-->
 <!--							<li class=""><a href="#workinprogress">Progress</a></li>-->
 							<li class=""><a href="http://tosdr.org/about.html">このサイトについて</a></li>
@@ -47,7 +47,7 @@
 <!--						</p>-->
 						<p class="pull-right follow-us">
 							Twitterで<a href="http://twitter.com/tosdr">@tosdr</a>をフォロー &nbsp; 
-							寄付はこちら： <a href="http://flattr.com/thing/821090/ToSDR" target="_blank"><img src="/img/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+							寄付はこちらへ： <a href="http://flattr.com/thing/821090/ToSDR" target="_blank"><img src="/img/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
 						</p>
 					</div>
 				</div>
@@ -60,14 +60,14 @@
                     <h1><img src="img/tosdr-logo.png" alt="Terms of Service; Didn&apos;t&nbsp;Read" width="960" height="328" /></h1>
                 </div>
 
-                <h2>「<strong>私は利用規約を読み、同意しました</strong>」はウェブ最大の嘘です。&nbsp;私たち&nbsp;はこの嘘を&nbsp;正す&nbsp;ことを目的としています。</h2>
+                <h2>「<strong>私は利用規約を読み、同意しました</strong>」はウェブ最大の嘘です。私たちはこの嘘を正すことを目的としています。</h2>
             </section>
         </div><!--hero-unit-->
 
 	    <div  class="container" id="tosdr-content" role="main">
                 <section id="intro">
-                    <p>私たちはユーザの権利を守る <a href="about.html" title="私たちについてさらに学ぶ">イニシアチブ</a>です。ウェブサイトの利用規約やプライバシー・ポリシーを、最高の<span class="label A">クラスA</span>から最悪の<span class="label C">クラスE</span>まで<a href="classification.html" title="私たちの格付けとは？">格付けし表示する</a>ことを目的としています。 </p>			
-                    <p>利用規約はしばしば<strong>読むには長すぎる</strong>ものです。しかし、その内容を理解することは重要です。皆さんのオンラインにおける権利は利用規約に依存するからです。<!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->私たちのレーティングが、皆さんが持つ権利について理解する手助けになることを望んでいます。ぜひ<a href="#services">以下のサービス</a>をクリックし、詳細をお読みください！ また、ブラウザに私たちのウェブブラウザアドオンをインストールすることで、レーティングを直接入手することもできます。:</p>
+                    <p>私たちはユーザの権利を守る <a href="about.html" title="私たちについてさらに学ぶ">イニシアチブ</a>です。ウェブサイトの利用規約やプライバシー・ポリシーを、最高の<span class="label A">クラスA</span>から最悪の<span class="label C">クラスE</span>まで<a href="classification.html" title="私たちの格付けとは？">格付けし表示する</a>ことを目的としています。 本サイトは<a href="http://tosdr.org/">ToS; DR</a>の日本版です。</p>			
+                    <p>利用規約は多くの場合、<strong>読むには長すぎる</strong>ものです。しかし、その内容を理解することは重要です。皆さんのオンラインにおける権利は、利用規約次第だからです。<!--Get informed about your rights: install the browser extension for <a href="https://addons.mozilla.org/en-US/firefox/addon/terms-of-service-didnt-read/">Firefox</a>, <a href="https://chrome.google.com/webstore/detail/hjdoplcnndgiblooccencgcggcoihigg">Chrome</a>, <a href="https://addons.opera.com/extensions/details/terms-of-service-didnt-read/">Opera</a> or <a href="http://safariextension.tosdr.org/">Safari</a>.</p-->私たちの格付けが、皆さんがご自分の権利について理解する手助けになることを望んでいます。ぜひ<a href="#services">以下に挙げられたサービスのどれか</a>をクリックし、詳細をお読みください！ また、私たちのウェブブラウザアドオンをインストールすることで、格付けをブラウザから直接入手することもできます。:</p>
                 </section>
                 <section id="further">
                     <p><a href="downloads.html" class="btn btn-large btn-success">ブラウザアドオンをダウンロード</a><!-- TODO alternative download link and alternative browser name addon/extension depending on browser used; otherwise just use canonical downloads.html link--></p>
@@ -88,8 +88,8 @@
                     <hr />
                         
                             <p>
-                              <a href="http://tosdr.org/blog/index.html" style="font-weight:700">Latest blog</a>
-                              (<a href="http://tosdr.org/blog/feed.rss">RSS Feed</a>)
+                              <a href="http://tosdr.org/blog/index.html" style="font-weight:700">最新のブログ</a>
+                              (<a href="http://tosdr.org/blog/feed.rss">RSS フィード</a>)
                             </p>
                             <ul id="blog-index">
                                 <li id="2013-06-17">
@@ -124,13 +124,13 @@
 		
 			
 			<section id="services">
-				<h2 class="page-header">レーティング</h2>
+				<h2 class="page-header">格付け結果</h2>
 
 				<div class="row">			
 					<div id="filter-by" class="span3">
 						<ul class="nav nav-pills">
-							<li class="active"><a href="#services">Services</a></li>
-							<li><a href="http://tosdr.org/topics.html#topics">Topics</a></li>
+							<li class="active"><a href="#services">サービス</a></li>
+							<li><a href="http://tosdr.org/topics.html#topics">トピック</a></li>
 						</ul>
 					</div>
 					
@@ -138,7 +138,7 @@
 						<div id="searchDiv" style="display:none">
 							<form class="form-search">
 								<div class="input-prepend">
-									<a href="#services" class="btn">Search</a>
+									<a href="#services" class="btn">検索</a>
 									<input class="input-xlarge search-query" id="searchBox" size="16" type="text" placeholder="e.g. facebook, twitter, search…">
 								</div>
 							</form>
@@ -233,42 +233,42 @@
                     <ul class="row">
                         <li class="span3"><a href="http://tosdr.org/index.html">ホーム</a>
                             <ul>
-                                <li><a href="http://tosdr.org/index.html#services">Rated Services</a></li>
-                                <li><a href="http://tosdr.org/topics.html#topics">Rated Topics</a></li>
-                                <li><a href="http://tosdr.org/downloads.html">Download browser extensions</a></li>
+                                <li><a href="http://tosdr.org/index.html#services">格付けされたサービス</a></li>
+                                <li><a href="http://tosdr.org/topics.html#topics">格付けされるトピック</a></li>
+                                <li><a href="http://tosdr.org/downloads.html">ブラウザ拡張をダウンロード</a></li>
                             </ul>
                         </li>
                         <li class="span3"><a href="http://tosdr.org/about.html">このサイトについて</a>
                             <ul>
                                 <li><a href="http://tosdr.org/about.html#contact">連絡先</a></li>
                                 <li><a href="http://tosdr.org/classification.html">格付け</a></li>
-                                <li><a href="http://tosdr.org/legal.html">法的Legal</a></li>
+                                <li><a href="http://tosdr.org/legal.html">法的情報</a></li>
                                 <li><a href="http://tosdr.org/blog/index.html">ブログ</a></li>
                             </ul>
                         </li>
                         <li class="span3"><a href="http://tosdr.org/contribute.html">貢献するには</a>
                             <ul>
-                                <li><a href="http://tosdr.org/contribute.html#donate">寄付</a></li><li><a href="http://tosdr.org/contribute.html#join">Join us</a></li>
-                                <li><a href="http://tosdr.org/get-involved.html">参加するには</a></li>
+                                <li><a href="http://tosdr.org/contribute.html#donate">寄付する</a></li><li><a href="http://tosdr.org/contribute.html#join">参加する</a></li>
+                                <li><a href="http://tosdr.org/get-involved.html">作業方法</a></li>
                                 <li><a href="http://tosdr.org/api.html">API</a></li>
                             </ul>
                         </li>
-                        <li class="span3">Spread
+                        <li class="span3">みんなに知らせる
                             <ul>
-                                <li><a href="http://twitter.com/tosdr">Follow us on twitter</a></li>
-                                <li><a href="https://plus.google.com/b/117929815628330307285/117929815628330307285/about">Add on Google+</a></li><li><a href="https://www.facebook.com/TermsOfServiceDidntRead">Like us on Facebook</a></li>
-                                <li><a href="http://github.com/tosdr/">Fork us on GitHub</a></li>
+                                <li><a href="http://twitter.com/tosdr">Twitterで私たちをフォロー</a></li>
+                                <li><a href="https://plus.google.com/b/117929815628330307285/117929815628330307285/about">Add on Google+</a></li><li><a href="https://www.facebook.com/TermsOfServiceDidntRead">Facebookで私たちにいいね！</a></li>
+                                <li><a href="https://github.com/mhatta/tosdr.org/">Githubで私たちをフォーク</a></li>
                             </ul>
                         </li>
                     </ul>
                 </nav>
 
-                <p id="credits"><strong><a href="http://tosdr.org">Terms of Service; Didn&apos;t Read</a></strong> is a project inspired by Aza Raskin&apos;s <a href="http://azarask.in/blog/post/privacy-icons/">Privacy Icons</a> and EFF&apos;s <a href="https://tosback.org/">TOSBack</a> (which we now collaborate on). Also related: <a href="http://www.opennotice.org/">OpenNotice</a>.</p>
+                <p id="credits"><strong><a href="http://tosdr-jp.5apps.com/">Terms of Service; Didn&apos;t Read</a></strong> はAza Raskinの <a href="http://azarask.in/blog/post/privacy-icons/">Privacy Icons</a>やEFFの <a href="https://tosback.org/">TOSBack</a> に刺激されて始まったプロジェクトです。EFFとは現在協力関係にあります。また、<a href="http://www.opennotice.org/">OpenNotice</a>とも関連しています。</p>
 
-                <p id="legalinfo"><strong>Nothing here should be considered legal advice</strong>. We express our opinion with no guarantee and we do not endorse any service in any way. Please refer to a qualified attorney for legal advice. <strong>Reading ToS;DR is in no way a replacement for reading the full terms to which you are bound.</strong> Disclosure: a list of donors and supporters <a href="http://tosdr.org/thanks.html">is published</a>. <a href="http://tosdr.org/legal.html">All legal information and Imprint</a>.</p>
+                <p id="legalinfo"><strong>本サイトにある情報を、法的助言と見なすべきではありません。</strong>. 本サイトで公表するのはあくまで私たちの意見であり、その内容にはいかなる保証も存在しません。また、私たちはあらゆる意味において、特定のサービスを推奨するものではありません。法的助言が必要な場合は、資格を持つ弁護士にお問い合わせください。<strong>皆さんが拘束されるのは利用規約の全文であり、本サイトを読んでも利用規約全文を読む代替には決してならないことにご留意ください。</strong> 情報開示: 寄付者とサポーターのリストは<a href="http://tosdr.org/thanks.html">こちら</a>にあります。<a href="http://tosdr.org/legal.html">法的情報と運営者に関する情報</a>。</p>
 
 
-                <p id="licensing"><a href="http://tosdr.org">ToS;DR</a> is Free Software, licensed under the GNU Affero General Public License (<a href="http://www.gnu.org/licenses/agpl-3.0-standalone.html" rel="license">AGPL-3.0</a>). Offer for <a href="https://github.com/tosdr/tosdr.org/zipball/master">Source (zip)</a>. The <code>.json</code> data inside the <a href="https://github.com/tosdr/tosdr.org/tree/master/services"><code>services/</code></a> and <a href="https://github.com/tosdr/tosdr.org/tree/master/points"><code>points/</code></a> directories are  also licensed under the Attribution - Share Alike (<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>). Icons by <a href="http://glyphicons.com/glyphicons-licenses/">Glyphicons</a> used under a CC BY <a href="http://creativecommons.org/licenses/by/3.0/deed.en">3.0  Unported license</a>. Thumbs Up and Thumbs Down icons modified by Jan.</p>
+                <p id="licensing"><a href="http://tosdr-jp.5apps.com">ToS;DR Japan</a> は自由なソフトウェア（フリーソフトウェア）であり、GNU Affero General Public License (<a href="http://www.gnu.org/licenses/agpl-3.0-standalone.html" rel="license">AGPL-3.0</a>)に従って利用が許諾されます。<a href="https://github.com/mhatta/tosdr.org/archive/master.zip">ソースコード (zip)</a>が入手可能です。<a href="https://github.com/mhatta/tosdr.org/tree/master/services"><code>services/</code></a> と <a href="https://github.com/mhatta/tosdr.org/tree/master/points"><code>points/</code></a> ディレクトリの中にある<code>.json</code>データは、クリエイティヴ・コモンズの表示 - 継承 (<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>)に従って利用が許諾されます。<a href="http://glyphicons.com/glyphicons-licenses/">Glyphicons</a>によるアイコンは、 CC BY <a href="http://creativecommons.org/licenses/by/3.0/deed.en">3.0  Unported license</a>に従って利用が許諾されます。Thumbs Up と Thumbs Down のアイコンは Jan によって改変されました。</p>
 
                 <p id="technical" class="center"><span style="color:#999">Un</span>hosted by <a href="https://5apps.com/apps/512cb93cbc73cb2f84000002"><img src="img/unhostedby5apps.png" alt="5apps" /></a>
             </div>
