--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                         </li>
                         <li class="span3">みんなに知らせる
                             <ul>
-                                <li><a href="http://twitter.com/tosdr">Twitterで私たちをフォロー</a></li>
-                                <li><a href="https://plus.google.com/b/117929815628330307285/117929815628330307285/about">Add on Google+</a></li><li><a href="https://www.facebook.com/TermsOfServiceDidntRead">Facebookで私たちにいいね！</a></li>
-                                <li><a href="https://github.com/mhatta/tosdr.org/">Githubで私たちをフォーク</a></li>
+                                <li><a href="http://twitter.com/tosdr">Twitterでフォロー</a></li>
+                                <li><a href="https://plus.google.com/b/117929815628330307285/117929815628330307285/about">Google+で追加</a></li><li><a href="https://www.facebook.com/TermsOfServiceDidntRead">Facebookでいいね！</a></li>
+                                <li><a href="https://github.com/mhatta/tosdr.org/">Githubでフォーク</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -265,10 +265,10 @@
 
                 <p id="credits"><strong><a href="http://tosdr-jp.5apps.com/">Terms of Service; Didn&apos;t Read</a></strong> はAza Raskinの <a href="http://azarask.in/blog/post/privacy-icons/">Privacy Icons</a>やEFFの <a href="https://tosback.org/">TOSBack</a> に刺激されて始まったプロジェクトです。EFFとは現在協力関係にあります。また、<a href="http://www.opennotice.org/">OpenNotice</a>とも関連しています。</p>
 
-                <p id="legalinfo"><strong>本サイトにある情報を、法的助言と見なすべきではありません。</strong>. 本サイトで公表するのはあくまで私たちの意見であり、その内容にはいかなる保証も存在しません。また、私たちはあらゆる意味において、特定のサービスを推奨するものではありません。法的助言が必要な場合は、資格を持つ弁護士にお問い合わせください。<strong>皆さんが拘束されるのは利用規約の全文であり、本サイトを読んでも利用規約全文を読む代替には決してならないことにご留意ください。</strong> 情報開示: 寄付者とサポーターのリストは<a href="http://tosdr.org/thanks.html">こちら</a>にあります。<a href="http://tosdr.org/legal.html">法的情報と運営者に関する情報</a>。</p>
+                <p id="legalinfo"><strong>本サイトにある情報を、法的助言と見なすべきではありません</strong>。本サイトで公表するのはあくまで私たちの意見であり、その内容にはいかなる保証も存在しません。また、私たちはいかなる意味においても、特定のサービスを推奨するものではありません。法的助言が必要な場合は、資格を持つ弁護士にお問い合わせください。<strong>皆さんが拘束されるのは利用規約の全文であり、本サイトを読んでも利用規約全文を読む代替には決してならないことにご留意ください。</strong> 情報開示: 寄付者とサポーターの一覧は<a href="http://tosdr.org/thanks.html">こちら</a>にあります。<a href="http://tosdr.org/legal.html">法的情報と運営者に関する情報</a>。</p>
 
 
-                <p id="licensing"><a href="http://tosdr-jp.5apps.com">ToS;DR Japan</a> は自由なソフトウェア（フリーソフトウェア）であり、GNU Affero General Public License (<a href="http://www.gnu.org/licenses/agpl-3.0-standalone.html" rel="license">AGPL-3.0</a>)に従って利用が許諾されます。<a href="https://github.com/mhatta/tosdr.org/archive/master.zip">ソースコード (zip)</a>が入手可能です。<a href="https://github.com/mhatta/tosdr.org/tree/master/services"><code>services/</code></a> と <a href="https://github.com/mhatta/tosdr.org/tree/master/points"><code>points/</code></a> ディレクトリの中にある<code>.json</code>データは、クリエイティヴ・コモンズの表示 - 継承 (<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>)に従って利用が許諾されます。<a href="http://glyphicons.com/glyphicons-licenses/">Glyphicons</a>によるアイコンは、 CC BY <a href="http://creativecommons.org/licenses/by/3.0/deed.en">3.0  Unported license</a>に従って利用が許諾されます。Thumbs Up と Thumbs Down のアイコンは Jan によって改変されました。</p>
+                <p id="licensing"><a href="http://tosdr-jp.5apps.com">ToS;DR Japan</a> は自由なソフトウェア（フリーソフトウェア）であり、GNU Affero General Public License (<a href="http://www.gnu.org/licenses/agpl-3.0-standalone.html" rel="license">AGPL-3.0</a>)に従って利用が許諾されます。<a href="https://github.com/mhatta/tosdr.org/archive/master.zip">ソースコード (zip)</a>が入手可能です。<a href="https://github.com/mhatta/tosdr.org/tree/master/services"><code>services/</code></a> と <a href="https://github.com/mhatta/tosdr.org/tree/master/points"><code>points/</code></a> ディレクトリの中にある<code>.json</code>データは、クリエイティヴ・コモンズ・ライセンスの表示 - 継承 (<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>)に従って利用が許諾されます。<a href="http://glyphicons.com/glyphicons-licenses/">Glyphicons</a>によるアイコンは、 CC BY <a href="http://creativecommons.org/licenses/by/3.0/deed.en">3.0  Unported license</a>に従って利用が許諾されます。Thumbs Up と Thumbs Down のアイコンは Jan によって改変されました。</p>
 
                 <p id="technical" class="center"><span style="color:#999">Un</span>hosted by <a href="https://5apps.com/apps/512cb93cbc73cb2f84000002"><img src="img/unhostedby5apps.png" alt="5apps" /></a>
             </div>
